--- a/main/package.json
+++ b/main/package.json
@@ -14,7 +14,9 @@
   },
   "dependencies": {
     "@mytest/a-module": "file:../@mytest/a-module",
-    "@mytest/b-module": "file:../@mytest/b-module"
+    "@mytest/b-module": "file:../@mytest/b-module",
+    "expose-loader": "^0.7.4",
+    "imports-loader": "^0.7.1"
   },
   "scripts": {
     "preinstall": "npm i ../@mytest/a-module ../@mytest/b-module",
